[package]
name = "rcss-css"
description = "Rusty Cascading Style Sheets (RCSS) is a styling language that brings Rust-inspired syntax to CSS. It combines the robustness of Rust with SASS-like features such as nesting and variables for cleaner, more maintainable styles."
version = "0.2.1-beta"
edition = "2024"

repository = "https://github.com/ved-patel226/RCSS"
homepage = "https://github.com/ved-patel226/RCSS"
readme = "README.md"
license-file = "LICENSE"


keywords = [
    "css",
    "sass",
    "css-preprocessor",
    "css-alternative",
    "web-development",
]
categories = ["web-programming", "command-line-utilities"]


[dependencies]
chrono = "0.4.40"
clap = { version = "4.4", features = ["derive"] }
colored = "3.0.0"
notify = "8.0.0"
pathdiff = "0.2.3"
pest = "2.7.15"
pest_derive = "2.7.15"
regex = "1.11.1"
walkdir = "2.5.0"
